# pokemon-showdown-bot

./: .gitignore  Dockerfile  pyproject.toml  sources.md
.claude/: plan-bc-integration.md  rules.md
data/parsed/: gen9ou_parsed.jsonl
data/trajectories/: species_encoder.json  trajectories.jsonl
docs/: PRD.md
docs/prs/: PR-001-project-setup.md  PR-002-showdown-server.md  PR-003-poke-env-integration.md  PR-004-replay-scraper.md  PR-005-replay-parser.md  PR-006-trajectory-converter.md  PR-007-data-validation.md  PR-008-team-loader.md  PR-009-team-curation.md  PR-010-team-observation.md  PR-011-random-agent.md  PR-012-heuristic-agent.md  PR-013-state-encoder.md  PR-014-action-masking.md  PR-015-policy-network.md  PR-016-behavior-cloning.md  PR-017-bc-checkpointing.md  PR-018-offline-rl-algorithms.md  PR-019-offline-rl-training.md  PR-020-evaluation-harness.md  PR-021-metrics-collection.md  README.md
scripts/: check_showdown.py  compare_baselines.py  compare_models.py  compute_stats.py  convert_trajectories.py  demo_battle.py  evaluate.py  fetch_sample_teams.py  generate_report.py  ladder_online.py  parse_replays.py  play_browser_battle.py  play_online.py  scrape_replays.py  setup_showdown.sh  slow_battle.py  split_data.py  team_stats.py  test_bc_agent.py  test_random_agent.py  train_bc.py  train_rl.py  validate_data.py  validate_teams.py
src/poke/: __init__.py  config.py
teams/: README.md
tests/: __init__.py  conftest.py  test_poke_env.py
tests/agents/: test_heuristic_agent.py  test_observation.py  test_random_agent.py  test_team_aware.py
(+78 files in other folders)
